--- a/assets/section-main-product-neolymp.css
+++ b/assets/section-main-product-neolymp.css
@@ -12,7 +12,7 @@
     width: 100%;
     max-width: 60rem;
     padding: 0.5rem;
-    background-color: var(--gradient-base-accent-1);
+    background-color: var(--color-background);
 }
 
 .product-form__buttons, .product-form__input .select {
