--- a/assets/section-main-product-neolymp.css
+++ b/assets/section-main-product-neolymp.css
@@ -27,3 +27,12 @@
     border: 1px solid #6a6a6a;
     background: var(--color);
 }
+
+.brand_usps {
+    margin-top: 2.5rem;
+    margin-bottom: 0;
+}
+
+.brand_usps summary {
+    padding: 0.5rem;
+}
