--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -397,7 +397,7 @@
 
             {% comment %} *** BRAND USPS *** {% endcomment %} 
             {%- when 'brand_usps' -%}
-              <div class="brand_usps" {{ block.shopify_attributes }}>
+              <div class="accordion brand_usps" {{ block.shopify_attributes }}>
                 <details id="Details-{{ block.id }}-{{ section.id }}">
                   <summary>
                     <div class="summary__title">
@@ -432,7 +432,6 @@
                     {% render 'icon-caret' %}
                   </summary>
                   <div class="accordion__content rte" id="ProductAccordion-{{ block.id }}-{{ section.id }}">
-                    <span class="measurements">
                       {%  if product.metafields.custom.laenge != blank %}{{ 'products.product.length' | t }}: {{ product.metafields.custom.laenge }}</br>{% endif %}
                       {%  if product.metafields.custom.breite != blank %}{{ 'products.product.width' | t }}: {{ product.metafields.custom.breite }}</br>{% endif %}
                       {%  if product.metafields.custom.hoehe != blank %}{{ 'products.product.height' | t }}: {{ product.metafields.custom.hoehe }}{% endif %}
@@ -444,7 +443,7 @@
 
             {% comment %} *** BESCHREIBUNG *** {% endcomment %} 
             {%- when 'collapsible_description' -%}
-            {%  if product.metafields.product.description != blank %}
+            {%  if product.description != blank %}
               <div class="product__accordion accordion quick-add-hidden" {{ block.shopify_attributes }}>
                 <details id="Details-{{ block.id }}-{{ section.id }}">
                   <summary>
@@ -457,7 +456,7 @@
                     {% render 'icon-caret' %}
                   </summary>
                   <div class="accordion__content rte" id="ProductAccordion-{{ block.id }}-{{ section.id }}">
-                    <span class="measurements">{{ product.metafields.product.description }}
+                    {{ product.description }}
                   </div>
                 </details>
               </div>
@@ -1396,7 +1395,7 @@
       "name": "t:sections.main-product.blocks.brand_usps.name",
       "settings": [
         {
-          "type": "text",
+          "type": "richtext",
           "id": "heading",
           "default": "Brand USP",
           "info": "t:sections.main-product.blocks.collapsible_tab.settings.heading.info",
