--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -307,7 +307,7 @@
       </media-gallery>
     </div>
     <div class="product__info-wrapper grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}">
-      <div class="social_info_bar">
+      <div class="social_info_bar color-background-2">
           {{ 'products.product.social_info_bar_1' | t }} <strong>1235</strong> {{ 'products.product.social_info_bar_2' | t }}
         </div>
       <div
@@ -402,9 +402,9 @@
                   <summary>
                     <div class="summary__title">
                       {% render 'icon-accordion', icon: block.settings.icon %}
-                      <h2 class="h4 brand_usps__title">
+                      <h3 class="h3 brand_usps__title">
                         {{ block.settings.heading | default: block.settings.page.title }}
-                      </h2>
+                      </h3>
                     </div>
                     {% render 'icon-caret' %}
                   </summary>
@@ -432,7 +432,6 @@
                     {% render 'icon-caret' %}
                   </summary>
                   <div class="accordion__content rte" id="ProductAccordion-{{ block.id }}-{{ section.id }}">
-                    <span class="measurements">
                       {%  if product.metafields.custom.laenge != blank %}{{ 'products.product.length' | t }}: {{ product.metafields.custom.laenge }}</br>{% endif %}
                       {%  if product.metafields.custom.breite != blank %}{{ 'products.product.width' | t }}: {{ product.metafields.custom.breite }}</br>{% endif %}
                       {%  if product.metafields.custom.hoehe != blank %}{{ 'products.product.height' | t }}: {{ product.metafields.custom.hoehe }}{% endif %}
@@ -457,7 +456,7 @@
                     {% render 'icon-caret' %}
                   </summary>
                   <div class="accordion__content rte" id="ProductAccordion-{{ block.id }}-{{ section.id }}">
-                    <span class="measurements">{{ product.metafields.product.description }}
+                    {{ product.description }}
                   </div>
                 </details>
               </div>
