--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -406,12 +406,13 @@
                         {{ block.settings.heading | default: block.settings.page.title }}
                       </h3>
                     </div>
-                    {% render 'icon-caret' %}
                   </summary>
-                  <div class="accordion__content rte" id="ProductAccordion-{{ block.id }}-{{ section.id }}">
-                    {{ block.settings.content }}
-                    {{ block.settings.page.content }}
-                  </div>
+                  {% if block.settings.content != blank or block.settings.page.content != blank %}
+                    <div class="accordion__content rte" id="ProductAccordion-{{ block.id }}-{{ section.id }}">
+                      {{ block.settings.content }}
+                      {{ block.settings.page.content }}
+                    </div>
+                  {% endif %}
                 </details>
               </div>
             {% comment %} *** ENDE BRAND USPS *** {% endcomment %} 
