--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -405,7 +405,7 @@
                         loading: 'lazy',
                         sizes: sizes,
                         widths: '20, 25, 50',
-                        class: 'brand_usps_icon'
+                        class: 'brand_usps__icon'
                       }}
                       <h3 class="h3 brand_usps__title">
                         {{ block.settings.heading | default: block.settings.page.title }}
