--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1408,7 +1408,7 @@
           "label": "t:sections.main-product.blocks.collapsible_tab.settings.heading.label"
         },
         {
-          "type": "image-picker",
+          "type": "image_picker",
           "id": "image",
           "label": "t:sections.multicolumn.blocks.column.settings.image.label"
         },
