--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -401,10 +401,7 @@
                 <details id="Details-{{ block.id }}-{{ section.id }}">
                   <summary>
                     <div class="summary__title">
-                      {{ block.settings.image | image_url: '25x25' | image_tag:
-                        loading: 'lazy',
-                        class: 'brand_usps__icon'
-                      }}
+                      {{ block.settings.image | image_url: '25x25' }}
                       <h3 class="h3 brand_usps__title">
                         {{ block.settings.heading | default: block.settings.page.title }}
                       </h3>
