--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -401,7 +401,12 @@
                 <details id="Details-{{ block.id }}-{{ section.id }}">
                   <summary>
                     <div class="summary__title">
-                      {{ block.settings.image | image_url: '25x25' }}
+                      {{ block.settings.image | image_url: width: 25 | image_tag:
+                        loading: 'lazy',
+                        sizes: "25px",
+                        widths: '20, 25, 50',
+                        class: 'multicolumn-card__image'
+                      }}
                       <h3 class="h3 brand_usps__title">
                         {{ block.settings.heading | default: block.settings.page.title }}
                       </h3>
