--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1401,8 +1401,8 @@
       "name": "t:sections.main-product.blocks.brand_usps.name",
       "settings": [
         {
-          "type": "text",
-          "id": "richtext",
+          "type": "richtext",
+          "id": "heading",
           "default": "Brand USP",
           "info": "t:sections.main-product.blocks.collapsible_tab.settings.heading.info",
           "label": "t:sections.main-product.blocks.collapsible_tab.settings.heading.label"
