--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1403,7 +1403,7 @@
         {
           "type": "richtext",
           "id": "heading",
-          "default": "Brand USP",
+          "default": "<p>Brand USP</p>",
           "info": "t:sections.main-product.blocks.collapsible_tab.settings.heading.info",
           "label": "t:sections.main-product.blocks.collapsible_tab.settings.heading.label"
         },
