--- a/assets/section-main-product-neolymp.css
+++ b/assets/section-main-product-neolymp.css
@@ -27,6 +27,16 @@
     background: var(--color);
 }
 
+.DeliveryHint {
+    font-size: 13px;
+    color: #2d8b53;
+    margin-bottom: 0;
+}
+
+.DeliveryHint--preorder {
+    color: #ff6d0a;
+}
+
 .brand_usps {
     margin-top: 2.5rem;
     margin-bottom: 0;
