--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -473,7 +473,7 @@
             {%- when 'delivery_tag' -%}
               {% if selected_variant.available == false or delivery_date != empty %}
                 {%- if delivery_date != null and delivery_date != "" and delivery_date > today_date -%}
-                    <div class="DeliveryHint DeliveryHint-preorder">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></div>
+                    <div class="DeliveryHint DeliveryHint--preorder">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></div>
                 {%- endif -%}
                 
               {% else%}
