--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -471,7 +471,10 @@
 
             {% comment %} *** LIEFERBAR *** {% endcomment %} 
             {%- when 'delivery_tag' -%}
-              {% if selected_or_first_available_variant.available == false or delivery_date != empty %}
+              {% if selected_or_first_available_variant.available == false  %}
+                test1
+                {% if delivery_date != blank  %} {{ delivery_date }}
+                {% comment %} 
                 {%- if delivery_date != null and delivery_date != "" and delivery_date > today_date -%}
                     <div class="DeliveryHint--preorder">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></div>
                 {%- endif -%}
@@ -485,8 +488,11 @@
                   <div class="DeliveryHint">●
                     {{ 'products.product.delivery-hint-ausland1' | t }}
                   </div>
-                {% endif %}
-              {% endif %}
+                {% endif %}{% endcomment %} 
+              {% endif %} 
+              {% else %}
+                test2
+              {% endif %} 
               {% comment %} *** ENDE LIEFERBAR *** {% endcomment %} 
             
             {%- when 'quantity_selector' -%}
