--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -28,6 +28,26 @@
   {%- endstyle -%}
 
   <script src="{{ 'product-form.js' | asset_url }}" defer="defer"></script>
+  {% comment %}*** Delivery Tag JS ***{% endcomment %}
+  <script>
+    const currentVariantId = {{ product.selected_or_first_available_variant.id }};
+    const metaData = {  {%  if localization.country.iso_code == 'DE' %}
+                              {{ 'products.product.delivery-hint-inland' | t }}
+                            {% else%}
+                                {{ 'products.product.delivery-hint-ausland1' | t }}
+                            {% endif %} };
+    const extraVariantInfo = (id) => {
+    let selector = document.querySelector('.DeliveryHint');
+    let hide = document.querySelector('.DeliveryHint')
+      if (metaData[id]) {
+       hide.style.display = 'block'
+       selector.innerHTML = metaData[id];
+      }
+      else
+       hide.style.display = 'none'
+    }
+    extraVariantInfo(currentVariantId);
+  </script>
 
   {%- assign first_3d_model = product.media | where: "media_type", "model" | first -%}
   {%- if first_3d_model -%}
@@ -471,12 +491,9 @@
 
             {% comment %} *** LIEFERBAR *** {% endcomment %} 
             {%- when 'delivery_tag' -%}
-              {% if selected_or_first_available_variant.available == false  %}
-                test1
-                {% if delivery_date != blank  %} {{ delivery_date }}
-                {% comment %} 
+              {% if selected_variant.available == false or delivery_date != empty %}
                 {%- if delivery_date != null and delivery_date != "" and delivery_date > today_date -%}
-                    <div class="DeliveryHint--preorder">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></div>
+                    <div class="DeliveryHint DeliveryHint-preorder">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></div>
                 {%- endif -%}
                 
               {% else%}
@@ -488,11 +505,8 @@
                   <div class="DeliveryHint">●
                     {{ 'products.product.delivery-hint-ausland1' | t }}
                   </div>
-                {% endif %}{% endcomment %} 
-              {% endif %} 
-              {% else %}
-                test2
-              {% endif %} 
+                {% endif %}
+              {% endif %}
               {% comment %} *** ENDE LIEFERBAR *** {% endcomment %} 
             
             {%- when 'quantity_selector' -%}
