--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -492,7 +492,7 @@
             {% comment %} *** LIEFERBAR *** {% endcomment %} 
             {%- when 'delivery_tag' -%}
               {% if selected_variant.available == false or delivery_date != empty %}
-
+                    test1
               {% endif %}
               {% comment %} *** ENDE LIEFERBAR *** {% endcomment %} 
             
