--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1073,7 +1073,7 @@
     },
     {
       "type": "muscle_groups",
-      "name": "t:products.product.muscle-groups",
+      "name": "t:sections.main-product.blocks.muscle-groups.name",
       "limit": 1
     },
     {
