--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -233,40 +233,41 @@
 
             {% comment %} *** MUSCLE GROUP MUSKELGRUPPE *** {% endcomment %} 
             {%- when 'muscle_groups' -%}    
-              <div class="muscle_groups_wrapper">
-                <div class="muscle_group_lable">
-                  <h3><b>{{ 'products.product.muscle_groups' | t }}:</b> {{ product.metafields.my_fields.muskelgruppen.value }}</h3>      
-                </div>
-              <div class="muscle_groups"> 
-                <img src="{{ 'body_muscles.svg' | file_url }}">
-                
-                {%- if product.metafields.my_fields.muskelgruppen.value contains 'Schulter' -%}
-                  <img src="{{ 'upper_arms_shoulders.svg' | file_url }}" class="muscle_group-image">
-                {%- endif -%}
-                
-                {%- if product.metafields.my_fields.muskelgruppen.value contains 'Brust' -%}
-                  <img src="{{ 'chest.svg' | file_url }}" class="muscle_group-image">
-                {%- endif -%}
-                
-                {%- if product.metafields.my_fields.muskelgruppen.value contains 'Nacken' -%}
-                  <img src="{{ 'upper_back_neck.svg' | file_url }}" class="muscle_group-image">
-                {%- endif -%}
-                
-                {%- if product.metafields.my_fields.muskelgruppen.value contains 'Schultern' -%}
-                  <img src="{{ 'upper_arms_shoulders.svg' | file_url }}" class="muscle_group-image">
-                {%- endif -%}
-                
-                {%- if product.metafields.my_fields.muskelgruppen.value contains 'Unterarm' -%}
-                  <img src="{{ 'forearms.svg' | file_url }}" class="muscle_group-image">
-                {%- endif -%}
-                
-                {%- if product.metafields.my_fields.muskelgruppen.value contains 'Innere Bauchmuskeln' -%}
-                  <img src="{{ 'abs.svg' | file_url }}" class="muscle_group-image">
-                {%- endif -%}   
-                
-              </div>
-            </div>  
-            
+              {% if product.metafields.my_fields.muskelgruppen.value != empty %}
+                <div class="muscle_groups_wrapper">
+                  <div class="muscle_group_lable">
+                    <h3><b>{{ 'products.product.muscle_groups' | t }}:</b> {{ product.metafields.my_fields.muskelgruppen.value }}</h3>      
+                  </div>
+                  <div class="muscle_groups"> 
+                    <img src="{{ 'body_muscles.svg' | file_url }}">
+                    
+                    {%- if product.metafields.my_fields.muskelgruppen.value contains 'Schulter' -%}
+                      <img src="{{ 'upper_arms_shoulders.svg' | file_url }}" class="muscle_group-image">
+                    {%- endif -%}
+                    
+                    {%- if product.metafields.my_fields.muskelgruppen.value contains 'Brust' -%}
+                      <img src="{{ 'chest.svg' | file_url }}" class="muscle_group-image">
+                    {%- endif -%}
+                    
+                    {%- if product.metafields.my_fields.muskelgruppen.value contains 'Nacken' -%}
+                      <img src="{{ 'upper_back_neck.svg' | file_url }}" class="muscle_group-image">
+                    {%- endif -%}
+                    
+                    {%- if product.metafields.my_fields.muskelgruppen.value contains 'Schultern' -%}
+                      <img src="{{ 'upper_arms_shoulders.svg' | file_url }}" class="muscle_group-image">
+                    {%- endif -%}
+                    
+                    {%- if product.metafields.my_fields.muskelgruppen.value contains 'Unterarm' -%}
+                      <img src="{{ 'forearms.svg' | file_url }}" class="muscle_group-image">
+                    {%- endif -%}
+                    
+                    {%- if product.metafields.my_fields.muskelgruppen.value contains 'Innere Bauchmuskeln' -%}
+                      <img src="{{ 'abs.svg' | file_url }}" class="muscle_group-image">
+                    {%- endif -%}   
+                  
+                  </div>
+                </div>  
+              {%- endif -%}   
             
             {%- when 'quantity_selector' -%}
               <div
