--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -238,8 +238,7 @@
                   <div class="muscle_group_lable">
                     <h3><b>{{ 'products.product.muscle_groups' | t }}:</b> </h3>      
                     {% for field in product.metafields.my_fields.musclegroups.value %}
-                      {{ field }}
-                      {% unless forloop.last %},{% else %}.{% endunless %}
+                      {{ field }}{% unless forloop.last %}, {% else %}.{% endunless %}
                     {% endfor %}
                   </div>
                   <div class="muscle_groups"> 
