--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -233,7 +233,7 @@
 
             {% comment %} *** MUSCLE GROUP MUSKELGRUPPE *** {% endcomment %} 
             {%- when 'muscle_groups' -%}    
-              {% if product.metafields.my_fields.musclegroups.value != empty and product.metafields.my_fields.musclegroups.value != "" and product.metafields.my_fields.musclegroups.value != " " %}
+              {% if product.metafields.my_fields.musclegroups != empty and product.metafields.my_fields.musclegroups != "" and product.metafields.my_fields.musclegroups != " " %}
                 <div class="muscle_groups_wrapper">
                   <div class="muscle_group_lable">
                     <h3><b>{{ 'products.product.muscle_groups' | t }}:</b> {% for field in product.metafields.my_fields.musclegroups.value %}
