--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -232,8 +232,12 @@
               {% comment %} *** ENDE LIEFERBAR *** {% endcomment %} 
 
             {% comment %} *** MUSCLE GROUP MUSKELGRUPPE *** {% endcomment %} 
-            {%- when 'muscle_groups' -%}    
-              {% if product.metafields.my_fields.musclegroups != empty and product.metafields.my_fields.musclegroups != "" and product.metafields.my_fields.musclegroups != " " %}
+            {%- when 'muscle_groups' -%}
+              {% assign count = 0 %}
+              {% for check in product.metafields.my_fields.musclegroups.value %} 
+                {% assign count = count | plus: 1 %}
+              {% endfor %}   
+              {% if count > 0 %}
                 <div class="muscle_groups_wrapper">
                   <div class="muscle_group_lable">
                     <h3><b>{{ 'products.product.muscle_groups' | t }}:</b> {% for field in product.metafields.my_fields.musclegroups.value %}
