--- a/assets/section-main-product-neolymp.css
+++ b/assets/section-main-product-neolymp.css
@@ -28,7 +28,6 @@
 }
 
 .brand_usps {
-    margin-top: 2.5rem;
     margin-bottom: 0;
     margin-left: 1rem;
     border: 0;
@@ -43,4 +42,8 @@
     height: calc(var(--font-heading-scale) * 3rem);
     margin-right: calc(var(--font-heading-scale) * 1rem);
     width: calc(var(--font-heading-scale) * 3rem);
+}
+
+.brand_usps__title {
+    margin: 0;
 }
