--- a/assets/component-list-menu.css
+++ b/assets/component-list-menu.css
@@ -28,3 +28,8 @@
   width: 10rem;
   padding: 0.5rem;
 }
+
+.list-menu > li:nth-child(7) > a {
+  font-weight: 700!important;
+  color: var(--color-base-accent-1);
+}
