--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -30,6 +30,13 @@
     {% render 'meta-tags' %}
 
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+    <!-- Google Tag Manager -->
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-PWDKXZ2');</script>
+    <!-- End Google Tag Manager -->
     <!-- starapps_scripts_start -->
 <!-- This code is automatically managed by StarApps Studio -->
 <!-- Please contact support@starapps.studio for any help -->
