--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -290,25 +290,26 @@
             {% comment %} *** ENDE BESCHREIBUNG *** {% endcomment %} 
 
             {% comment %} *** LIEFERBAR *** {% endcomment %} 
-            <div id="delivery_tag-{{ section.id }}">
-              {%- if product.selected_or_first_available_variant.inventory_quantity < 1 -%}
-                Vorbestellbar
-                {%- if delivery_date != null and delivery_date != "" and delivery_date > today_date -%}
-                    <div class="DeliveryHint-preorder">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></div>
-                {%- endif -%}
-              
-            {% else%}
-              {% if localization.country.iso_code == 'DE' %}
-                <div class="DeliveryHint">● 
-                  {{ 'products.product.delivery-hint-inland' | t }}
-                </div>
+            {%- when 'collapsible_description' -%}
+              <div id="delivery_tag-{{ section.id }}">
+                {%- if product.selected_or_first_available_variant.inventory_quantity < 1 -%}
+                  Vorbestellbar
+                  {%- if delivery_date != null and delivery_date != "" and delivery_date > today_date -%}
+                      <div class="DeliveryHint-preorder">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></div>
+                  {%- endif -%}
+                
               {% else%}
-                <div class="DeliveryHint">●
-                  {{ 'products.product.delivery-hint-ausland1' | t }}
-                </div>
+                {% if localization.country.iso_code == 'DE' %}
+                  <div class="DeliveryHint">● 
+                    {{ 'products.product.delivery-hint-inland' | t }}
+                  </div>
+                {% else%}
+                  <div class="DeliveryHint">●
+                    {{ 'products.product.delivery-hint-ausland1' | t }}
+                  </div>
+                {% endif %}
               {% endif %}
-            {% endif %}
-            </div>
+              </div>
               {% comment %} *** ENDE LIEFERBAR *** {% endcomment %} 
 
             {% comment %} *** MUSCLE GROUP MUSKELGRUPPE *** {% endcomment %} 
